--- a/analysis/01-SPDEtoy-INLA-SPDE.Rmd
+++ b/analysis/01-SPDEtoy-INLA-SPDE.Rmd
@@ -5,4 +5,111 @@ date: "3/28/2022"
 output: pdf_document
 ---
 
-Follow [this site](https://becarioprecario.bitbucket.io/spde-gitbook/ch-intro.html#sec:toyexample). 
+Again, explanations are a bit confusing but we will follow the example for the purpose of learning the **R** package `R-INLA`. 
+
+## Load packages 
+
+```{r}
+library(INLA)
+library(tidyverse)
+library(pander)
+library(ggplot2)
+library(gridExtra)
+```
+
+## Simulate or load data
+
+It'll be helpful to walk through the simulation section. 
+
+```{r}
+# Simulate data 
+# https://becarioprecario.bitbucket.io/spde-gitbook/ch-intro.html#sec:simulatoy
+n <- 200 #5
+set.seed(123) 
+pts <- cbind(
+  s1 = sample(1:n / n - 0.5 / n)^2,
+  s2 = sample(1:n / n - 0.5 / n)^2)
+```
+
+```{r}
+# Get a (lower triangular) matrix of distances
+dmat <- as.matrix(dist(pts)) 
+#dmat
+```
+
+```{r}
+# Set parameters 
+beta0 <- 10      # for mean
+sigma2e <- 0.3   # for the nugget 
+sigma2u <- 5     # for the Matérn covariance
+kappa <- 7       # for the Matérn covariance
+nu <- 1          # for the Matérn covariance
+```
+
+```{r}
+# Create a function cMatern to compute the Matérn covariance of two points at distance h
+# https://becarioprecario.bitbucket.io/spde-gitbook/ch-intro.html#sec:matern
+cMatern <- function(h, nu, kappa) {
+  ifelse(h > 0, besselK(h * kappa, nu) * (h * kappa)^nu / 
+    (gamma(nu) * 2^(nu - 1)), 1)
+}
+```
+
+```{r}
+# Get a Matérn covariance of the spatial process
+mcor <- cMatern(dmat, nu, kappa) 
+mcov <- sigma2e * diag(nrow(mcor)) + sigma2u * mcor
+```
+
+```{r}
+# Get the samples
+R <- chol(mcov)
+set.seed(234) 
+y1 <- beta0 + drop(crossprod(R, rnorm(n))) 
+```
+
+The values differ a bit but it's fine. Let's stick to the data `SPDEtoy` for consistency purposes. 
+
+```{r}
+# Put them in a df 
+SPDEtoy_sim <- tibble(
+  s1 = pts[, 1], 
+  s2 = pts[, 2], 
+  y = y1
+)
+```
+
+## Load data 
+
+```{r}
+class(SPDEtoy)
+```
+
+```{r}
+SPDEtoy %>% head %>% pander
+```
+
+## The SPDE (Stochastic Partial Differential Equations) model 
+
+The SPDE model can be defined 
+
+$$
+y | \beta_0, u, \sigma^2_e \sim N(\beta_0 + Au, \sigma^2_e)
+$$
+$$
+u \sim GF(0, \Sigma),
+$$
+where $\beta_0$ is the intercept, $A$ is the projector matrix that links the spatial Gaussian random field to the locations of the observed data, and $u$ is a spatial Gaussian random field. 
+
+I am unable to follow the rest of the sections.
+
+
+\newpage
+
+## Reference 
+
+[2.1.3 The Matérn covariance.](https://becarioprecario.bitbucket.io/spde-gitbook/ch-intro.html#sec:matern)
+
+[2.3 A toy example.](https://becarioprecario.bitbucket.io/spde-gitbook/ch-intro.html#sec:toyexample)
+
+
